--- a/css/style.css
+++ b/css/style.css
@@ -354,14 +354,17 @@ nav a {
   .hero-container {
     grid-template-columns: auto;
     margin-bottom: 5rem;
+    padding-top: 5rem;
   }
   .hero-image {
     text-align: center;
+    margin-bottom: 1rem;
+    width: 100%;
+    height: 100%;
   }
   .hero-image img {
-    width: 50%;
-    height: 50%;
-    margin-bottom: 1rem;
+    width: 100%;
+    height: 100%;
   }
   .hero-text h1 {
     font-size: 2.5rem;
@@ -374,6 +377,12 @@ nav a {
   }
 }
 @media (max-width: 545px) {
+  .hero-image {
+    width: 300px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .hero-text h1 {
     font-size: 2rem;
     margin-bottom: 1.5rem;
@@ -381,14 +390,13 @@ nav a {
   .hero-text h2 {
     font-size: 1.5rem;
     font-weight: 100;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
   }
   .type-box h1 {
     font-size: 1.6rem;
   }
-  .hero-image img {
-    width: 65%;
-    height: 65%;
+  .go-down {
+    bottom: 1rem;
   }
 }
 @media (max-width: 420px) {
@@ -398,6 +406,7 @@ nav a {
   .hero {
     padding: 0;
   }
+  
   .hero-text h1 {
     font-size: 1.8rem;
     margin-bottom: 2rem;
@@ -422,9 +431,6 @@ nav a {
   }
   .hero-text h2 {
     margin-bottom: 3rem;
-  }
-  .hero-image img {
-    margin-top: 1rem;
   }
   .nav-list li {
     font-size: 1.2rem;
