--- a/css/style.css
+++ b/css/style.css
@@ -809,11 +809,12 @@ nav a {
   opacity: 0.9;
 }
 .project-img {
+  border-radius: 6px;
   width: 100%;
   height: 100%;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  border-radius: 6px;
+  object-fit: cover;
+  object-position: 0% 100%;
+  opacity: 0.7;
 }
 .project-title {
   position: relative;
@@ -832,6 +833,7 @@ nav a {
   color: var(--main-black);
   font-size: 1.2rem;
 }
+
 /* media queries */
 @media (max-width: 1045px) {
   .projects-container {
