Update: Hero img responsiveness in smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -431,6 +431,10 @@ nav a {
   }
 }
 @media (max-width: 365px) {
+  .hero-image {
+    width: 250px;
+    height: 250px;
+  }
   .hero-text h1 {
     font-size: 1.6rem;
   }
